# PhotoShare

./: .env.example  .gitignore  LICENSE  Procfile  README.md  alchemy.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 075cecc8e3e4_transformations.py  36bc121bb99d_user_blocked.py  5f4728d206ba_initial.py  d8d84d488b17_initial_add.py  f28d15f66460_init.py  f8e8bfcb8edd_init.py
src/: database.py  dependencies.py  logger.py  main.py  models.py  schemas.py  settings.py
src/auth/: authentication.py  dependencies.py  roles.py  router.py  schemas.py
src/auth/services/: auth.py  role.py
src/comments/: models.py  router.py  schemas.py  service.py
src/photos/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
src/photos/services/: photo_service.py  transformation_service.py
src/rating/: models.py  router.py  schemas.py  service.py
src/services/: authentication.py  cloudinary_utils.py  roles.py
src/tags/: dependencies.py  models.py  router.py  schemas.py  service.py
src/user/: models.py  router.py  schemas.py  service.py  services.py
tests/: conftest.py
tests/auth/: not_test_router_auth.py  test_auth_router.py  test_router_auth.py
tests/comments/: test_comments_router.py  test_router_comments.py  test_service_comments.py
tests/rating/: test_router_rating.py  test_service_rating.py
tests/services/: test_authentication.py
tests/tags/: test_router_tags.py  test_service_tags.py  test_tags_service.py
tests/user/: test_route_user.py  test_service_user.py
(+2 files in other folders)
